# pigg

./: .gitignore  70.pigg.rules  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNDING.json  Gemfile  HELP.md  INSTALLING.md  Makefile  README.md  RELEASING.md  RUNNING.md  SECURITY.md  _config.yml  codecov.yml  dist-workspace.toml  jonesy.toml
.cargo/: cargo.toml  config.toml
.github/: FUNDING.yml  dependabot.yml  install-arm-linkers.yml
.github/ISSUE_TEMPLATE/: release-manual-testing-template.md
.github/workflows/: arm_builds.yml  build_and_test.yml  checks.yml  daily_features_check.yml  device_tests.yml  e2e-tests.yml  gcc-install.yml  github-build-setup.yml  install-arm-linkers.yml  jekyll-gh-pages.yml  jonesy.yml  pr-preview.yml  release.yml  release_attach_uf2.yml  surge-preview.yml  surge-teardown.yml
_includes/: footer.html
_layouts/: default.html
_sass/: _base.scss  _layout.scss  _syntax-highlighting.scss
assets/: features.md  videos.md
configs/: andrews_board.pigg  pico_test.pigg
css/: main.scss
hw_test/: Cargo.toml  Makefile
hw_test/tests/: cross.rs  iroh.rs  lib_to_iroh_devices.rs  lib_to_mixed_piglet.rs  lib_to_piglet_iroh.rs  lib_to_porky_tcp.rs  lib_to_porky_usb.rs  lib_to_tcp_devices.rs  lib_to_usb_devices.rs  mdns_support.rs  mod.rs  piggui_tcp.rs  piggui_to_iroh_devices.rs  piggui_to_iroh_pigglet.rs  piggui_to_porky_tcp.rs  piggui_to_tcp_devices.rs  piggui_to_tcp_pigglet.rs  piggui_to_usb_devices.rs  piggui_usb.rs  tcp.rs  usb.rs  usb_support.rs
hw_test/tests/discovery/: mdns.rs  mod.rs  usb.rs
hw_test/tests/lib_to_devices/: lib_to_iroh_devices.rs  lib_to_tcp_devices.rs  lib_to_usb_devices.rs  mdns_iroh.rs  mdns_tcp.rs  mod.rs  usb_iroh.rs  usb_tcp.rs  usb_usb.rs
hw_test/tests/pigglet/: iroh.rs  iroh_then_tcp.rs  mod.rs  tcp.rs  tcp_then_iroh.rs
hw_test/tests/piggui_to_devices/: mod.rs  piggui_to_iroh_devices.rs  piggui_to_tcp_devices.rs  piggui_to_usb_devices.rs
pigdef/: Cargo.toml
pigdef/src/: config.rs  description.rs  lib.rs  net_values.rs  pin_function.rs  usb_values.rs
pigglet/: Cargo.toml  Makefile  README.md
pigglet/src/: config.rs  instance.rs  pigglet.rs  service.rs
pigglet/src/device_net/: iroh_device.rs  mod.rs  tcp_device.rs
pigglet/tests/: cli_options.rs  cross.rs  iroh.rs  iroh_then_tcp.rs  mod.rs  singleton.rs  tcp.rs  tcp_then_iroh.rs
pigglet/wix/: main.wxs
piggpio/: Cargo.toml
piggpio/src/: config.rs  fake_pi.rs  lib.rs  pi.rs
piggui/: Cargo.toml  Makefile  README.md  Trunk.toml  index.html
piggui/.cargo/: config.toml
piggui/src/: discovery.rs  file_helper.rs  hardware_subscription.rs  local_host.rs  persistence.rs  piggui.rs  piglet.rs  ui_test.rs  wasm_test.rs
piggui/src/host_net/: local_host.rs
piggui/src/hw/: config.rs  mod.rs  pin_descriptions.rs  pin_function.rs
piggui/src/hw_definition/: config.rs
piggui/src/networking/: piggui_local_helper.rs
piggui/src/views/: about.rs  config_menu.rs  connect_dialog.rs  connect_dialog_handler.rs  connection_menu.rs  devices_menu.rs  dialog_styles.rs  hardware_menu.rs  hardware_styles.rs  hardware_view.rs  info_dialog.rs  info_row.rs  layout_menu.rs  layout_selector.rs  message_box.rs  mod.rs  modal_handler.rs  pin_state.rs  ssid_dialog.rs  waveform.rs
piggui/src/widgets/: circle.rs  clicker.rs  led.rs  line.rs  toast.rs
piggui/src/widgets/spinner/: circular.rs  easing.rs  mod.rs
piggui/tests/: connect.rs  iroh.rs  mod.rs  singleton.rs  support.rs  tcp.rs
piggui/wix/: main.wxs
piglet/: Cargo.toml  Makefile
piglet/src/: piglet.rs
piglet/src/device_net/: iroh_device.rs  tcp_device.rs
piglet/tests/: cross.rs  iroh.rs  mod.rs  tcp.rs
piglet/wix/: main.wxs
pignet/: Cargo.toml
pignet/src/: discovery.rs  iroh_host.rs  lib.rs  tcp_host.rs  usb_host.rs
pigpio/: Cargo.toml
pigpio/src/: driver.rs  fake_pi.rs  lib.rs  pi.rs  pin_descriptions.rs  tests.rs
porky/: .gitignore  BUILDING.md  Cargo.toml  Makefile  README.md  build.rs  cubelles.toml  home-plus.toml  hotspot.toml  memory.x  memory2.x  rust-toolchain.toml  ssid.toml  work.toml
porky/.cargo/: config.toml
porky/src/: flash.rs  gpio.rs  gpio_input_monitor.rs  main.rs  mdns.rs  persistence.rs  pin_descriptions.rs  porky.rs  porky_w.rs  tcp.rs  usb.rs  usb_raw.rs  usb_tcp.rs  wifi.rs
site/: HELP.md  INSTALLING.md  RUNNING.md  _config.yml  index.md  pigglet  piggui  porky
site/_includes/: head.html  header.html
site/_layouts/: page.html  post.html
site/css/: main.scss
src/: connect_dialog_handler.rs  discovery.rs  event.rs  file_helper.rs  gpio.rs  hardware_helper.rs  hardware_subscription.rs  help.rs  hw_listener.rs  input_listener.rs  iroh_discovery.rs  iroh_helper.rs  layout.rs  local_device.rs  modal_handler.rs  net.rs  network_subscription.rs  persistence.rs  piggui.rs  piggui_iroh_helper.rs  piggui_tcp_helper.rs  piglet.rs  piglet_iroh_helper.rs  piglet_tcp_helper.rs  pin_layout.rs  pin_state.rs  style.rs  toast_handler.rs  usb.rs  usb_raw.rs  version.rs
src/custom_widgets/: button_style.rs  circle.rs  clicker.rs  led.rs  mod.rs  pin_style.rs  toast.rs  toggler_style.rs  waveform.rs
src/device/: iroh_device.rs  tcp_device.rs
src/device_net/: iroh_device.rs  mod.rs  tcp_device.rs
src/gpio/: mod.rs  none.rs  pi.rs  pico.rs  pin_descriptions.rs  pins.rs
src/host/: iroh.rs  local.rs  mod.rs  tcp.rs  usb.rs
src/host_net/: iroh_host.rs  local_host.rs  mod.rs  tcp_host.rs  usb_host.rs
src/hw/: config.rs  config_message.rs  driver.rs  fake_hw.rs  hardware_description.rs  hardware_subscription.rs  hw_listener.rs  mod.rs  none.rs  pi.rs  pi_hw.rs  pico.rs  pin_description.rs  pin_descriptions.rs  pin_function.rs
src/hw_definition/: config.rs  config_message.rs  description.rs  event.rs  hardware_description.rs  mod.rs  pin_function.rs  usb_requests.rs  usb_values.rs
src/networking/: iroh_device.rs  iroh_host.rs  local_device.rs  mod.rs  piggui_iroh_helper.rs  piggui_tcp_helper.rs  piglet_iroh_helper.rs  piglet_tcp_helper.rs  tcp_device.rs
tests/: andrews_board.piggui  one_pin_config.piggui  piglet.rs  support.rs
wix/: main.wxs
(+61 files in other folders)
