[package]
name = "hw_test"
version = "0.6.0"
edition = "2021"
rust-version = "1.80"

[features]
default = ["usb", "tcp", "discovery", "iroh"]
usb = ["pigdef/usb", "pignet/usb"]
tcp = ["pigdef/tcp", "pignet/tcp"]
discovery = ["pigdef/discovery", "pignet/discovery"]
iroh = ["pigdef/iroh", "pignet/iroh"]

[dev-dependencies]
pigdef = { path = "../pigdef" }
pignet = { path = "../pignet" }
tokio = { version = "1.44", default-features = false, features = ["time", "rt", "rt-multi-thread", "macros"] }
async-std = "1.13.1"
serial_test = "3.1.1"
anyhow = "1.0.97"
mdns-sd = { version = "0.13.3", default-features = false, features = ["async"] }
iroh = { version = "0.33.0", default-features = false }
sysinfo = { version = "0.33" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
