[package]
name = "hw_test"
description = "Tests for pigg project that test interaction with real HW devices (Pi Zero, Pico etc) connected to the runner"
version = "0.7.1"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
documentation = "https://github.com/andrewdavidmackenzie/pigg/README.md"
repository = "https://github.com/andrewdavidmackenzie/pigg/"
homepage = "https://github.com/andrewdavidmackenzie/pigg/"

[features]
default = ["usb", "tcp", "discovery", "iroh"]
usb = ["pigdef/usb", "pignet/usb"]
tcp = ["pigdef/tcp", "pignet/tcp"]
discovery = ["pigdef/discovery", "pignet/discovery"]
iroh = ["pigdef/iroh", "pignet/iroh"]

[dev-dependencies]
pigdef = { path = "../pigdef", version = "0.7" }
pignet = { path = "../pignet", version = "0.7" }
tokio = { version = "1.47", default-features = false, features = ["time", "rt", "rt-multi-thread", "macros"] }
async-std = "1.13.2"
serial_test = "3.1.1"
anyhow = "1.0.99"
mdns-sd = { version = "0.13.11", default-features = false, features = ["async"] }
iroh = { version = "0.92.0", default-features = false }
sysinfo = { version = "0.37" } # used in support.rs via path
chrono = "0.4.42"

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
