[package]
name = "pigdef"
description = "Core struct and const definitions for multiple crates in the pigg project"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
exclude.workspace = true
rust-version.workspace = true

[features]
default = ["dep:heapless", "dep:embassy-time"]
tcp = []
discovery = []
usb = []
iroh = []
std = ["serde/std"]

[dependencies]
serde = { version = "1.0.226", default-features = false, features = ["derive"] }

# Optional Dependencies for "no_std" case
heapless = { version = "0.9.1", default-features = false, features = ["serde", "defmt"], optional = true }
embassy-time = { version = "0.5.0", default-features = false, features = ["defmt", "defmt-timestamp-uptime"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = "3"

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
always_include_features = ["std"]