[package]
name = "pigglet"
description = "A CLI agent for interacting with local Raspberry Pi GPIO Hardware from piggui GUI"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true
rust-version.workspace = true

[package.metadata.wix]
upgrade-guid = "7DCB054F-6CE0-4914-876E-AEA0C2E91328"
path-guid = "17155407-8DA8-45BD-8C67-91FE4C7E99AA"
license = false
eula = false

[[bin]]
name = "pigglet"
path = "src/pigglet.rs"

[features]
default = ["iroh", "tcp", "discovery"]
tcp = ["pigdef/tcp", "dep:portpicker", "dep:local-ip-address"]
discovery = ["pigdef/discovery", "dep:mdns-sd"]
iroh = ["pigdef/iroh", "dep:iroh", "dep:rand", "dep:rand_core"]
usb = ["pigdef/usb"]

[dependencies]
pigdef = { path = "../pigdef", version = "0.7", default-features = false, features = ["std"] }
piggpio = { path = "../piggpio", version = "0.7" }

# for alloc/no_alloc over the wire serialization/deserialization
postcard = { version = "1.1.3", features = ["alloc"] }
async-std = "1.13"
env_logger = { version = "0.11.8", default-features = false }
anyhow = { version = "1", default-features = false, features = ["std"] }
futures = { version = "0.3.31", default-features = false }
tokio = { version = "1.47", default-features = false, features = ["time", "rt", "rt-multi-thread", "macros"] }
log = { version = "0.4.27", default-features = false }
sysinfo = { version = "0.37", default-features = false, features = ["system"] }
service-manager = { version = "0.8.0", default-features = false }
clap = { version = "4.5.42", default-features = false, features = ["std", "help", "error-context"] }
serde_json = { version = "1.0.142", default-features = false, features = ["std"] }

iroh = { version = "0.91.0", default-features = false, optional = true }
portpicker = { version = "0.1.1", default-features = false, optional = true }
local-ip-address = { version = "0.6.5", default-features = false, optional = true }
mdns-sd = { version = "0.13.11", default-features = false, optional = true }
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng"], optional = true }
rand_core = { version = "0.6.4", optional = true } # for iroh_device

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = "3"
serial_test = "3.1.1"

[dev-dependencies]
# For tests
pignet = { path = "../pignet", version = "0.7", features = ["iroh", "tcp", "discovery", "usb"] }
sysinfo = { version = "0.37" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[package.metadata.docs.rs]
features = ["iroh", "tcp"]
rustdoc-args = ["--cfg", "docsrs"]
