[package]
name = "piggpio"
description = "A crate with GPIO code for use in other pigg project crates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
pigdef = { path = "../pigdef", version = "0.7", default-features = false, features = ["std"] }
serde_json = "1.0.145"
log = "0.4.28"

[target.'cfg(not(all(target_os = "linux", any(target_arch = "aarch64", target_arch = "arm"), target_env = "gnu")))'.dependencies]
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

[target.'cfg(all(target_os = "linux", any(target_arch = "aarch64", target_arch = "arm"), target_env = "gnu"))'.dependencies]
rppal = "0.22.1"
libc = "0.2.176"
