[package]
name = "piggui"
description = "A Graphical User Interface for interacting with local and remote Raspberry Pi and Pi Pico Hardware"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true
rust-version.workspace = true

[package.metadata.wix]
upgrade-guid = "7DCB054F-6CE0-4914-876E-AEA0C2E91328"
path-guid = "17155407-8DA8-45BD-8C67-91FE4C7E99AA"
license = false
eula = false

[[bin]]
name = "piggui"
path = "src/piggui.rs"

[features]
default = ["iroh", "tcp", "usb", "discovery"]
iroh = ["pigdef/iroh", "pignet/iroh", "dep:iroh"]
tcp = ["pigdef/tcp", "pignet/tcp"]
discovery = ["pigdef/discovery", "pignet/discovery", "dep:mdns-sd"]
usb = ["pigdef/usb", "pignet/usb"]

[dependencies]
pigdef = { path = "../pigdef", version = "0.7", default-features = false, features = ["std"] }
pignet = { path = "../pignet", version = "0.7" }
piggpio = { path = "../piggpio", version = "0.7" }

chrono = { version = "0.4", default-features = false, features = ["now", "serde"] }
anyhow = { version = "1", default-features = false, features = ["std"] }
futures = { version = "0.3.31", default-features = false }
tokio = { version = "1.49", default-features = false, features = ["time", "rt", "macros"] }
log = { version = "0.4.29", default-features = false }
iced_futures = { version = "0.14.0", default-features = false }
plotters-iced = { version = "0.12", git = "https://github.com/Joylei/plotters-iced", branch = "iced-0.14", default-features = false }
plotters = { version = "0.3.7", default-features = false, features = [
    "chrono",
    "line_series",
] }
once_cell = { version = "1.21.3", default-features = false }
lyon_algorithms = { version = "1.0", default-features = false }
async-std = "1.13"
webbrowser = { version = "1.1", default-features = false }
iced_aw = { version = "0.13", default-features = false, features = ["menu"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }

iroh = { version = "0.96.1", default-features = false, optional = true }
# FIX: Pin digest to version compatible with curve25519-dalek 5.0.0-pre.1
digest = { version = "=0.11.0-rc.10" }

mdns-sd = { version = "0.17.1", default-features = false, features = ["async", "reuseport"], optional = true }
sysinfo = { version = "0.38" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.17.2"
clap = { version = "4.5.58", default-features = false, features = ["std", "help", "error-context"] }
piggpio = { path = "../piggpio", version = "0.7" }

# wasm32 - Use 'tiny-skia' renderer in iced
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.1", features = ["wasm_js"] }
iced = { version = "0.14.0", default-features = false, features = ["tokio", "tiny-skia", "advanced", "canvas"] }

# Raspberry Pi - Use 'tiny-skia' renderer in iced
[target.'cfg(all(not(target_arch = "wasm32"), any(all(target_arch = "aarch64", target_os = "linux"), target_arch = "arm")))'.dependencies]
iced = { version = "0.14.0", default-features = false, features = ["tokio", "tiny-skia", "advanced", "canvas", "x11", "wayland"] }
wayland-sys = { version = "0.31.8", features = ["dlopen"] }

# Non-Raspberry Pi - use 'wgpu' renderer in iced
[target.'cfg(all(not(target_arch = "wasm32"), not(any(all(target_arch = "aarch64", target_os = "linux"), target_arch = "arm"))))'.dependencies]
iced = { version = "0.14.0", default-features = false, features = ["tokio", "wgpu", "canvas", "advanced", "x11", "wayland"] }
wayland-sys = { version = "0.31.8", features = ["dlopen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = "3"
serial_test = "3.3.1"
sysinfo = { version = "0.38" }

[dev-dependencies] # For tests
pignet = { path = "../pignet", version = "0.7" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[package.metadata.docs.rs]
features = ["iroh", "tcp"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.trunk.build]
target = "index.html"
dist = "dist"
no_default_features = false

