[package]
name = "piglet"
description = "A CLI agent for interacting with local Raspberry Pi GPIO Hardware from piggui GUI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
exclude.workspace = true
rust-version.workspace = true

[package.metadata.wix]
upgrade-guid = "7DCB054F-6CE0-4914-876E-AEA0C2E91328"
path-guid = "17155407-8DA8-45BD-8C67-91FE4C7E99AA"
license = false
eula = false

[[bin]]
name = "piglet"
path = "src/piglet.rs"

[features]
default = ["iroh", "tcp", "discovery"]
tcp = ["pigdef/tcp", "dep:portpicker", "dep:local-ip-address"]
discovery = ["pigdef/discovery", "dep:mdns-sd"]
iroh = ["pigdef/iroh", "dep:iroh", "dep:rand"]
usb = ["pigdef/usb"]

[dependencies]
pigdef = { path = "../pigdef", default-features = false, features = ["std"] }
pigpio = { path = "../pigpio" }

# for alloc/no_alloc over the wire serialization/deserialization
postcard = { version = "1.1.1", features = ["alloc"] }
async-std = "1.13"
env_logger = { version = "0.11.6", default-features = false }
anyhow = { version = "1", default-features = false, features = ["std"] }
futures = { version = "0.3.31", default-features = false }
tokio = { version = "1.43", default-features = false, features = ["time", "rt", "rt-multi-thread", "macros"] }
log = { version = "0.4.26", default-features = false }
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
service-manager = { version = "0.8.0", default-features = false }
clap = { version = "4.5.31", default-features = false, features = ["std", "help", "error-context"] }
serde_json = { version = "1.0.139", default-features = false, features = ["std"] }

iroh = { version = "0.33.0", default-features = false, optional = true }
portpicker = { version = "0.1.1", default-features = false, optional = true }
local-ip-address = { version = "0.6.3", default-features = false, optional = true }
mdns-sd = { version = "0.13.3", default-features = false, optional = true }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = "3"
serial_test = "3.1.1"

[dev-dependencies]
# For tests
pignet = { path = "../pignet", features = ["iroh", "tcp", "discovery", "usb"] }
sysinfo = { version = "0.33" }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[package.metadata.docs.rs]
features = ["iroh", "tcp"]
rustdoc-args = ["--cfg", "docsrs"]
